--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,15 +4,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/menu_calc"
-        android:title="Расчет" />
+        android:title="@string/menu_calc" />
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/menu_info"
-        android:title="Информация" />
+        android:title="@string/menu_info" />
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/menu_about"
-        android:title="О приложении" />
+        android:title="@string/menu_about" />
 </menu>
