--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="cardview_color">#EDEDED</color>
+    <color name="cardview_color">#F4F6FA</color>
     <color name="bottom_menu">#1E5BB6</color>
     <color name="background_color">#DCE9FB</color>
 </resources>
