--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -86,6 +86,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:layout_marginTop="16dp"
+                            android:autofillHints="decimal number"
                             android:ems="10"
                             android:hint="@string/fragment_calc_cat_weight_edittext"
                             android:importantForAutofill="yes"
@@ -102,7 +103,7 @@
                             android:textStyle="bold" />
 
                         <Spinner
-                            android:id="@+id/spinner"
+                            android:id="@+id/coefSpinner"
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:layout_marginTop="16dp"
@@ -184,6 +185,7 @@
                     app:layout_constraintEnd_toEndOf="@+id/cardView2"
                     app:layout_constraintStart_toStartOf="@+id/cardView2"
                     app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
