--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -165,10 +165,10 @@
                 </androidx.cardview.widget.CardView>
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/bResult"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
+                    android:layout_marginBottom="8dp"
                     android:backgroundTint="@color/bottom_menu"
                     android:text="@string/fragment_calc_result_btn"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -176,12 +176,15 @@
                     app:layout_constraintStart_toStartOf="@+id/cardView2" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/tvResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="serif"
                     android:text="TextView"
+                    android:textSize="20sp"
+                    android:textStyle="bold|italic"
                     android:visibility="invisible"
-                    app:layout_constraintBottom_toTopOf="@+id/button"
+                    app:layout_constraintBottom_toTopOf="@+id/bResult"
                     app:layout_constraintEnd_toEndOf="@+id/cardView2"
                     app:layout_constraintStart_toStartOf="@+id/cardView2"
                     app:layout_constraintTop_toBottomOf="@+id/cardView2" />
