Added fragment switching by nav menu

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_calc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/menu_calc"
         android:title="@string/menu_calc" />
     <item
+        android:id="@+id/menu_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/menu_info"
         android:title="@string/menu_info" />
     <item
+        android:id="@+id/menu_about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/menu_about"
